--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ body {
   justify-content: center;
   padding: 1rem;
   box-shadow: 0 2px 10px lightgray;
+  background-color: purple;
 }
 
 .navbar {
@@ -41,15 +42,15 @@ body {
 
 .logo {
   font-size: 1.7rem;
-  color: purple;
+  color: white;
 }
 
-input[type="search"], input[type="submit"] {
+input[type="search"], input[type="submit"], .delete-btn {
   font-size: 1.2rem;
   padding: 0.2em 0.5em;
 }
 
-input[type="submit"] {
+input[type="submit"], .delete-btn {
   cursor: pointer;
   border: 2px solid purple;
   border-radius: 5px;
@@ -58,20 +59,19 @@ input[type="submit"] {
   transition: all 200ms;
 }
 
-input[type="submit"]:hover {
+input[type="submit"]:hover, .delete-btn:hover {
   background-color: white;
   color: purple;
 }
 
-.form-container {
+.form-container, .note-container {
   display: flex;
-  justify-content: center;
-  margin: 1rem 0;
+  margin: 1rem auto;
   padding: 1rem;
+  max-width: 1000px;
 }
 
 .note-field {
-  max-width: 700px;
   width: 100%;
   display: block;
   margin-bottom: 1rem;
@@ -80,3 +80,13 @@ input[type="submit"]:hover {
 .form-container h2 {
   margin-bottom: 1rem;
 }
+
+.note {
+  padding: 1rem;
+  border: 1px solid gray;
+}
+
+.note p {
+  margin-bottom: 1rem;
+}
+
